Added list of version. Download now in QThread.

--- a/main_window_design.ui
+++ b/main_window_design.ui
@@ -19,11 +19,24 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QHBoxLayout" name="layoutRootFolderSettings">
       <item>
-       <widget class="QLabel" name="labelRootPath">
+       <widget class="QLabel" name="labelRootFolder">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string>No root folder specified!</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btnSetRootFolder">
+        <property name="text">
+         <string>Change</string>
         </property>
        </widget>
       </item>
@@ -82,6 +95,9 @@
      </layout>
     </item>
     <item>
+     <layout class="QVBoxLayout" name="test"/>
+    </item>
+    <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -109,7 +125,6 @@
     <property name="title">
      <string>File</string>
     </property>
-    <addaction name="actionSetRootFolder"/>
     <addaction name="actionQuit"/>
    </widget>
    <addaction name="menuFile"/>
