First pass for automatic version checking.

--- a/icons/resources.qrc
+++ b/icons/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="icons">
+    <file>cancel.ico</file>
+    <file>download.ico</file>
     <file>trash.ico</file>
     <file>tray.ico</file>
     <file>clear.ico</file>
