--- a/main_window_design.ui
+++ b/main_window_design.ui
@@ -58,6 +58,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnSetRootFolder">
+        <property name="cursor">
+         <cursorShape>ArrowCursor</cursorShape>
+        </property>
         <property name="text">
          <string>Change</string>
         </property>
@@ -65,6 +68,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnOpenRootFolder">
+        <property name="cursor">
+         <cursorShape>ArrowCursor</cursorShape>
+        </property>
         <property name="text">
          <string>Open</string>
         </property>
@@ -80,9 +86,24 @@
      </widget>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QHBoxLayout" name="layoutUpdateTaskIndicator">
       <item>
        <widget class="QProgressBar" name="progressBar">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>22</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>ArrowCursor</cursorShape>
+        </property>
         <property name="value">
          <number>0</number>
         </property>
@@ -102,29 +123,38 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnUpdate">
+        <property name="cursor">
+         <cursorShape>ArrowCursor</cursorShape>
+        </property>
         <property name="text">
-         <string>Update</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normalon>:/icons/download.ico</normalon>
+         </iconset>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btnCancel">
+        <property name="cursor">
+         <cursorShape>ArrowCursor</cursorShape>
+        </property>
         <property name="text">
-         <string>Cancel</string>
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normalon>:/icons/cancel.ico</normalon>
+         </iconset>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
-     <widget class="Line" name="line_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="listVersions"/>
+     <layout class="QVBoxLayout" name="layoutListVersions"/>
     </item>
     <item>
      <spacer name="verticalSpacer">
