--- a/icons/resources.qrc
+++ b/icons/resources.qrc
@@ -1,13 +1,15 @@
 <RCC>
   <qresource prefix="icons">
-    <file>cancel.ico</file>
-    <file>download.ico</file>
-    <file>trash.ico</file>
-    <file>tray.ico</file>
-    <file>clear.ico</file>
-    <file>quit.ico</file>
+    <file>folder_add.png</file>
+    <file>cancel.png</file>
+    <file>star.png</file>
+    <file>trash.png</file>
+    <file>download.png</file>
+    <file>folder.png</file>
     <file>app.ico</file>
+    <file>clear.png</file>
+    <file>quit.png</file>
+    <file>tray.png</file>
     <file>app_inv.ico</file>
-    <file>star.ico</file>
   </qresource>
 </RCC>
