--- a/main_window_design.ui
+++ b/main_window_design.ui
@@ -26,7 +26,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Blender Version Manager</string>
+   <string>Blender Version Manager 1.2</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -352,10 +352,10 @@
     </iconset>
    </property>
    <property name="text">
-    <string notr="true">Toggle Minimize to Tray</string>
+    <string notr="true">Minimize to Tray</string>
    </property>
    <property name="toolTip">
-    <string notr="true">Toggle Minimize to Tray</string>
+    <string notr="true">Minimize to Tray</string>
    </property>
    <property name="statusTip">
     <string notr="true"/>
@@ -375,6 +375,9 @@
    </property>
    <property name="statusTip">
     <string notr="true"/>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
  </widget>
